# SMACC2

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Partial_code_documentation.md  README.md  SMACC2-not-released.galactic.repos  SMACC2-not-released.humble.repos  SMACC2-not-released.rolling.repos  SMACC2.galactic.repos  SMACC2.repos  SMACC2.rolling.repos  download_navigation_dependencies.sh  hercules_sm_manuel_ws_setup.repos  run_clang_format.sh  setup_build.sh  smacc2.repos  smacc2.repos.bkp  smacc_trace.sh  start_lttng_smacc.sh  tracing.md
smacc2/: CHANGELOG.rst  CMakeLists.txt  package.xml
smacc2/include/smacc/: common.h  common.hpp  component.h  component.hpp  smacc.h  smacc.hpp  smacc_asynchronous_client_behavior.h  smacc_asynchronous_client_behavior.hpp  smacc_client.h  smacc_client.hpp  smacc_client_behavior.h  smacc_client_behavior.hpp  smacc_client_behavior_base.h  smacc_client_behavior_base.hpp  smacc_default_events.h  smacc_default_events.hpp  smacc_event_generator.h  smacc_event_generator.hpp  smacc_fifo_scheduler.h  smacc_fifo_scheduler.hpp  smacc_fifo_worker.h  smacc_orthogonal.h  smacc_orthogonal.hpp  smacc_signal.h  smacc_signal.hpp  smacc_signal_detector.h  smacc_signal_detector.hpp  smacc_state.h  smacc_state.hpp  smacc_state_base.h  smacc_state_base.hpp  smacc_state_machine.h  smacc_state_machine.hpp  smacc_state_machine_base.h  smacc_state_machine_base.hpp  smacc_state_reactor.h  smacc_state_reactor.hpp  smacc_transition.h  smacc_transition.hpp  smacc_types.h  (+4 more)
smacc2/include/smacc2/: callback_counter_semaphore.hpp  common.hpp  component.hpp  smacc.hpp  smacc_asynchronous_client_behavior.hpp  smacc_client.hpp  smacc_client_behavior.hpp  smacc_client_behavior_base.hpp  smacc_default_events.hpp  smacc_event_generator.hpp  smacc_fifo_scheduler.hpp  smacc_orthogonal.hpp  smacc_signal.hpp  smacc_signal_detector.hpp  smacc_state.hpp  smacc_state_base.hpp  smacc_state_machine.hpp  smacc_state_machine_base.hpp  smacc_state_reactor.hpp  smacc_transition.hpp  smacc_types.hpp  smacc_updatable.hpp
smacc2/scripts/: trace.sh
smacc2/src/smacc/: client.cpp  common.cpp  orthogonal.cpp  signal_detector.cpp  smacc_client_async_behavior.cpp  smacc_client_behavior.cpp  smacc_client_behavior_base.cpp  smacc_component.cpp  smacc_event_generator.cpp  smacc_state.cpp  smacc_state_info.cpp  smacc_state_machine.cpp  smacc_state_machine_info.cpp  smacc_tracing.cpp  smacc_updatable.cpp  state_reactor.cpp  trace_provider.cpp
smacc2/src/smacc2/: callback_counter_semaphore.cpp  client.cpp  common.cpp  orthogonal.cpp  signal_detector.cpp  smacc_client_async_behavior.cpp  smacc_client_behavior.cpp  smacc_client_behavior_base.cpp  smacc_component.cpp  smacc_event_generator.cpp  smacc_state.cpp  smacc_state_info.cpp  smacc_state_machine.cpp  smacc_state_machine_info.cpp  smacc_tracing.cpp  smacc_updatable.cpp  state_reactor.cpp  trace_provider.cpp
smacc2_client_library/http_client/: CMakeLists.txt  package.xml
smacc2_client_library/keyboard_client/: CHANGELOG.rst  CMakeLists.txt  package.xml
smacc2_client_library/keyboard_client/servers/: keyboard_server_node.py
smacc2_client_library/lifecyclenode_client/: CHANGELOG.rst  CMakeLists.txt  package.xml
smacc2_client_library/move_group_interface_client/: CHANGELOG.rst  CMakeLists.txt  package.xml
smacc2_client_library/multirole_sensor_client/: CHANGELOG.rst  CMakeLists.txt  package.xml
smacc2_client_library/ros_timer_client/: CHANGELOG.rst  CMakeLists.txt  package.xml
smacc2_event_generators/eg_random_generator/: package.xml
smacc2_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
smacc2_msgs/msg/: SmaccContainerStructure.msg  SmaccState.msg  SmaccStateMachine.msg  SmaccStateReactor.msg  SmaccTransition.msg  SmaccTransitionLogEntry.msg
smacc2_msgs/srv/: SmaccGetTransitionHistory.srv
smacc2_sm_reference_library/_smacc2_sm_template/: CMakeLists.txt  README.md  package.xml.template
smacc2_sm_reference_library/_smacc2_sm_template/launch/: sm_name.launch
smacc2_sm_reference_library/sm_atomic/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
smacc2_sm_reference_library/sm_atomic_http/: CMakeLists.txt  README.md  package.xml
smacc2_sm_reference_library/sm_atomic_http/launch/: sm_atomic_http.launch  sm_atomic_http.py
smacc2_sm_reference_library/sm_atomic_lifecycle/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
smacc2_sm_reference_library/sm_atomic_lifecycle/config/: sm_atomic_test.yaml
smacc2_sm_reference_library/sm_atomic_lifecycle/launch/: sm_atomic.py  sm_atomic_lifecycle.launch  sm_atomic_lifecycle.py
smacc2_sm_reference_library/sm_atomic_performance_test/: CMakeLists.txt  README.md  package.xml
smacc2_sm_reference_library/sm_atomic_performance_test/config/: sm_atomic_test.yaml
smacc2_sm_reference_library/sm_atomic_performance_test/launch/: sm_atomic_performance_test.launch
smacc2_sm_reference_library/sm_autoware_avp/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
smacc2_sm_reference_library/sm_autoware_avp/config/: sm_autoware_avp.yaml  sm_autoware_avp_config.yaml
smacc2_sm_reference_library/sm_autoware_avp/launch/: sm_autoware_avp.launch
smacc2_sm_reference_library/sm_autoware_avp/scripts/: prepared_ade_environment.sh
smacc2_sm_reference_library/sm_aws_warehouse_navigation/: CHANGELOG.rst  CMakeLists.txt  package.xml
smacc2_sm_reference_library/sm_aws_warehouse_navigation/models/: Ar_tag.dae
smacc2_sm_reference_library/sm_dance_bot_coverage/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
smacc2_sm_reference_library/sm_dance_bot_msgs/: CMakeLists.txt  README.md  package.xml
smacc2_sm_reference_library/sm_dance_bot_strikes_back/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
smacc2_sm_reference_library/sm_dance_bot_warehouse_2/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
smacc2_sm_reference_library/sm_dancebot_office_ue/: CHANGELOG.rst  CMakeLists.txt  package.xml
smacc_msgs/: CMakeLists.txt  package.xml
smacc_msgs/msg/: SmaccContainerStatus.msg  SmaccContainerStructure.msg  SmaccTransitionLogEntry.msg
(+4342 files in other folders)
