<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>smacc2</name>
  <version>2.9.1</version>

  <description>SMACC is a ROS/C++ library to implement in easy and systematic way UML StateCharts (AKA state machines). SMACC is inspired by the SMACH ROS package and it is built on top of Boost StateChart library. Developed by Reel Robotics </description>

  <author email="pablo@ibrobotics.com">Pablo Inigo Blasco</author>
  <author email="ba@leadtank.org">Brett Aldrich</author>
  <maintainer email="pablo@ibrobotics.com">Pablo Inigo Blasco</maintainer>
  <license>BSD-3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rcl</depend>
  <depend>rclcpp</depend>
  <depend>smacc_msgs</depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
