<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>smacc2</name>
  <version>2.9.1</version>

  <description>SMACC is a ROS/C++ library to implement in easy and systematic way UML StateCharts (AKA state machines). SMACC is inspired by the SMACH ROS package and it is built on top of Boost StateChart library. Developed by Reel Robotics </description>

  <author email="pablo@ibrobotics.com">Pablo Inigo Blasco</author>
  <author email="ba@leadtank.org">Brett Aldrich</author>
  <maintainer email="pablo@ibrobotics.com">Pablo Inigo Blasco</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rcl</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>smacc_msgs</depend>
  <depend>tracetools</depend>
  <depend>tracetools_trace</depend>
  <depend>tracetools_launch</depend>
  <depend>liblttng-ust-dev</depend>
  <build_depend>libboost-thread-dev</build_depend>
  <exec_depend>libboost-thread</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
