<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>smacc2_msgs</name>
  <version>0.1.0</version>

  <description>Messages and services used in smacc2.</description>

  <maintainer email="brett@robosoft.ai">Brett Aldrich</maintainer>
  <maintainer email="pablo@robosoft.ai">Pablo Inigo Blasco</maintainer>
  <maintainer email="denis@stoglrobotics.de">Denis Stogl</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <build_depend>builtin_interfaces</build_depend>

  <depend>action_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
