<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>multirole_sensor_client</name>
  <version>0.0.0</version>
  <description>The multirole_sensor_client package</description>
  <maintainer email="pablo@ibrobotics.com">Pablo Iñigo Blasco</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>smacc2</depend>
  <depend>smacc2_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
