<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sm_atomic_lifecycle</name>
  <version>2.3.6</version>
  <description>The sm_atomic_lifecycle package</description>
  <maintainer email="pablo@ibrobotics.com">Pablo Inigo Blasco</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ament_cmake_auto</depend>
  <depend>ros_timer_client</depend>
  <depend>lifecyclenode_client</depend>
  <depend>smacc2</depend>
  <depend>std_msgs</depend>

  <exec_depend>xterm</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
