<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sm_atomic_performance_test</name>
  <version>0.0.0</version>
  <description>The sm_atomic_performance_test package</description>
  <maintainer email="pablo@ibrobotics.com">Pablo Inigo Blasco</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ros_timer_client</depend>
  <depend>smacc2</depend>

  <exec_depend>xterm</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
