<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sm_autoware_avp</name>
  <version>0.0.0</version>
  <description>The sm_autoware_avp package</description>
  <maintainer email="smacc2@smacc2.cool">SMACC2 is cool</maintainer>
  <license>Apache-2.0</license>
  <license>MyLicense</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>libboost-thread-dev</depend>

  <depend>ros_timer_client</depend>
  <depend>smacc2</depend>
  <depend>autoware_auto_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
